restructuring the blog

--- a/book/404.html
+++ b/book/404.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - Sam Reiswig&#x27;s blog</title>
+        <title>Page not found - Sam Reiswig</title>
         <base href="/">
 
 
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Reasoning.html"><strong aria-hidden="true">1.</strong> Reasoning in AI</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="AboutMe.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="Reasoning.html"><strong aria-hidden="true">1.</strong> Reasoning in AI</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -144,7 +144,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Sam Reiswig&#x27;s blog</h1>
+                    <h1 class="menu-title">Sam Reiswig</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
