--- a/book/print.html
+++ b/book/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Sam Reiswig&#x27;s blog</title>
+        <title>Sam Reiswig</title>
         <meta name="robots" content="noindex">
 
 
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Reasoning.html"><strong aria-hidden="true">1.</strong> Reasoning in AI</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="AboutMe.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="Reasoning.html"><strong aria-hidden="true">1.</strong> Reasoning in AI</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -144,7 +144,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Sam Reiswig&#x27;s blog</h1>
+                    <h1 class="menu-title">Sam Reiswig</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -176,7 +176,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="reasoning-in-ml"><a class="header" href="#reasoning-in-ml">Reasoning in ML</a></h1>
+                        <p>I'm Sam Reiswig, a Cybersecurity Analyst with a strong intrest in Machine Learning and Artificial Intelligence. In the past I've been a Quality Assurance Analyst, Software Development Engineer in Test, Software Engineer working on Test Equipment, and Web Dev.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="reasoning-in-ml"><a class="header" href="#reasoning-in-ml">Reasoning in ML</a></h1>
 
                     </main>
 
