--- a/book/print.html
+++ b/book/print.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="AboutMe.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="Reasoning.html"><strong aria-hidden="true">1.</strong> Reasoning in AI</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="Summary/AboutMe.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="Blog/Reasoning.html"><strong aria-hidden="true">1.</strong> Reasoning in AI</a></li><li class="chapter-item expanded affix "><li class="part-title">Personal Musings</li><li class="chapter-item expanded "><a href="Musings/IdeasVsActions.html"><strong aria-hidden="true">2.</strong> Ideas vs Action</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -178,6 +178,7 @@
                     <main>
                         <p>I'm Sam Reiswig, a Cybersecurity Analyst with a strong intrest in Machine Learning and Artificial Intelligence. In the past I've been a Quality Assurance Analyst, Software Development Engineer in Test, Software Engineer working on Test Equipment, and Web Dev.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="reasoning-in-ml"><a class="header" href="#reasoning-in-ml">Reasoning in ML</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><p>It's one thing to have good ideas but it's another to take action on them. When you can, take action on them and see where your life goes from there.</p>
 
                     </main>
 
