--- a/book/print.html
+++ b/book/print.html
@@ -178,6 +178,7 @@
                     <main>
                         <p>I'm Sam Reiswig, a Cybersecurity Analyst with a strong intrest in Machine Learning and Artificial Intelligence. In the past I've been a Quality Assurance Analyst, Software Development Engineer in Test, Software Engineer working on Test Equipment, and Web Dev.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="reasoning-in-ml"><a class="header" href="#reasoning-in-ml">Reasoning in ML</a></h1>
+<p>Test</p>
 <div style="break-before: page; page-break-before: always;"></div><p>It's one thing to have good ideas but it's another to take action on them. When you can, take action on them and see where your life goes from there.</p>
 
                     </main>
