--- a/book/Musings/IdeasVsActions.html
+++ b/book/Musings/IdeasVsActions.html
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../Summary/AboutMe.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="../Blog/Reasoning.html"><strong aria-hidden="true">1.</strong> Reasoning in AI</a></li><li class="chapter-item expanded affix "><li class="part-title">Personal Musings</li><li class="chapter-item expanded "><a href="../Musings/IdeasVsActions.html" class="active"><strong aria-hidden="true">2.</strong> Ideas vs Action</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../Summary/AboutMe.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="../Blog/AIxCC.html"><strong aria-hidden="true">1.</strong> AIxCC</a></li><li class="chapter-item expanded affix "><li class="part-title">Personal Musings</li><li class="chapter-item expanded "><a href="../Musings/IdeasVsActions.html" class="active"><strong aria-hidden="true">2.</strong> Ideas vs Action</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -181,7 +181,7 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../Blog/Reasoning.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../Blog/AIxCC.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -192,7 +192,7 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../Blog/Reasoning.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../Blog/AIxCC.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
