--- a/book/Summary/AboutMe.html
+++ b/book/Summary/AboutMe.html
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../Summary/AboutMe.html" class="active">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="../Blog/Reasoning.html"><strong aria-hidden="true">1.</strong> Reasoning in AI</a></li><li class="chapter-item expanded affix "><li class="part-title">Personal Musings</li><li class="chapter-item expanded "><a href="../Musings/IdeasVsActions.html"><strong aria-hidden="true">2.</strong> Ideas vs Action</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../Summary/AboutMe.html" class="active">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="../Blog/AIxCC.html"><strong aria-hidden="true">1.</strong> AIxCC</a></li><li class="chapter-item expanded affix "><li class="part-title">Personal Musings</li><li class="chapter-item expanded "><a href="../Musings/IdeasVsActions.html"><strong aria-hidden="true">2.</strong> Ideas vs Action</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -175,14 +175,15 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p>I'm Sam Reiswig, a Cybersecurity Analyst with a strong intrest in Machine Learning and Artificial Intelligence. In the past I've been a Quality Assurance Analyst, Software Development Engineer in Test, Software Engineer working on Test Equipment, and Web Dev.</p>
+                        <p>I'm Sam Reiswig, a Cybersecurity Analyst with a strong intrest in Machine Learning and Artificial Intelligence.<br />
+In the past I've been a Quality Assurance Analyst, Software Development Engineer in Test, Software Engineer working on Test Equipment, and Web Dev.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next prefetch" href="../Blog/Reasoning.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../Blog/AIxCC.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -193,7 +194,7 @@
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next prefetch" href="../Blog/Reasoning.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../Blog/AIxCC.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
