--- a/book/Summary/AboutMe.html
+++ b/book/Summary/AboutMe.html
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../Summary/AboutMe.html" class="active">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="../Blog/AIxCC.html"><strong aria-hidden="true">1.</strong> AIxCC</a></li><li class="chapter-item expanded affix "><li class="part-title">Personal Musings</li><li class="chapter-item expanded "><a href="../Musings/IdeasVsActions.html"><strong aria-hidden="true">2.</strong> Ideas vs Action</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../Summary/AboutMe.html" class="active">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="../Blog/AIxCC.html"><strong aria-hidden="true">1.</strong> AIxCC</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
