--- a/book/print.html
+++ b/book/print.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="Summary/AboutMe.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="Blog/AIxCC.html"><strong aria-hidden="true">1.</strong> AIxCC</a></li><li class="chapter-item expanded affix "><li class="part-title">Personal Musings</li><li class="chapter-item expanded "><a href="Musings/IdeasVsActions.html"><strong aria-hidden="true">2.</strong> Ideas vs Action</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="Summary/AboutMe.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Blog</li><li class="chapter-item expanded "><a href="Blog/AIxCC.html"><strong aria-hidden="true">1.</strong> AIxCC</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -186,7 +186,6 @@ The challenge is to design a Cyber Reasoning System to detect and patch the Top 
 <em><a href="https://cwe.mitre.org/top25/archive/2023/2023_top25_list.html">Top 25 CWE Most Dangerous Software Weaknesses 2023</a></em><br />
 <em><a href="https://arxiv.org/pdf/2303.18184.pdf">Survey Paper</a></em><br />
 <em><a href="https://program-repair.org/">Program Repair</a></em></p>
-<div style="break-before: page; page-break-before: always;"></div><p>It's one thing to have good ideas but it's another to take action on them. When you can, take action on them and see where your life goes from there.</p>
 
                     </main>
 
