Rewrote About Me

--- a/book/print.html
+++ b/book/print.html
@@ -176,11 +176,16 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p>I'm Sam Reiswig, a Cybersecurity Analyst with a strong intrest in Machine Learning and Artificial Intelligence.<br />
-In the past I've been a Quality Assurance Analyst, Software Development Engineer in Test, Software Engineer working on Test Equipment, and Web Dev.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="the-aixcc-comptetiton"><a class="header" href="#the-aixcc-comptetiton">The AIxCC Comptetiton</a></h1>
-<p>At DEF CON 2023 DARPA announced the AI Cyber Challenge to Redefine Code Security.<br />
-The challenge is to design a Cyber Reasoning System to detect and patch the Top 25 Most Dangerous Software Weaknesses.</p>
+                        <img src="Summary/Profile.jpg" alt="Me" width="100" height="125">
+<p>Hi! I'm Sam Reiswig, currently I work as a Cybersecurity Analyst.<br />
+In the past I've been a Quality Assurance Analyst, Software Development Engineer in Test, Software Engineer working on Factory Test Equipment, and Web Dev.<br />
+In the Future who knows what I'll be.</p>
+<p>The goal with this blog is to document projects that I work on in my spare time.<br />
+The main focus will be Software Projects and ML topics but I don't like to be pigeonholed.<br />
+Any topic is fair game!</p>
+<p>Enjoy!</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="aixcc"><a class="header" href="#aixcc">AIxCC</a></h1>
+<p>The AIxCC is a challenge is to design a Cyber Reasoning System to detect and patch the Top 25 Most Dangerous Software Weaknesses.</p>
 <p>Reference:<br />
 <em><a href="https://aicyberchallenge.com/about/">AIxCC Webpage</a></em><br />
 <em><a href="https://cwe.mitre.org/top25/archive/2023/2023_top25_list.html">Top 25 CWE Most Dangerous Software Weaknesses 2023</a></em><br />
