--- a/book/Summary/AboutMe.html
+++ b/book/Summary/AboutMe.html
@@ -175,8 +175,14 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p>I'm Sam Reiswig, a Cybersecurity Analyst with a strong intrest in Machine Learning and Artificial Intelligence.<br />
-In the past I've been a Quality Assurance Analyst, Software Development Engineer in Test, Software Engineer working on Test Equipment, and Web Dev.</p>
+                        <img src="Profile.jpg" alt="Me" width="100" height="125">
+<p>Hi! I'm Sam Reiswig, currently I work as a Cybersecurity Analyst.<br />
+In the past I've been a Quality Assurance Analyst, Software Development Engineer in Test, Software Engineer working on Factory Test Equipment, and Web Dev.<br />
+In the Future who knows what I'll be.</p>
+<p>The goal with this blog is to document projects that I work on in my spare time.<br />
+The main focus will be Software Projects and ML topics but I don't like to be pigeonholed.<br />
+Any topic is fair game!</p>
+<p>Enjoy!</p>
 
                     </main>
 
